Update code to latest version